usage of the correct exception and private fields for genre Adapted readme.md
(cherry picked from commit 35314eba6248e45b2fbf9618bdc29f862b65cabd)
in https://github.com/PeterHardeel/serverside_books_20252026

# Conflicts:
#	readme.md
#	src/main/java/be/thomasmore/bookserver/model/Genre.java
#	src/main/java/be/thomasmore/bookserver/services/BookService.java